# RobbyTheRobot

./: CMakeLists.txt  README.md  RobbyTheRobot.sln
RobbyTheRobot/: EnvironementCreator.cpp  RobbyTheRobot.vcxproj  RobbyTheRobot.vcxproj.filters  RobotCreator.cpp  RobotRuler.cpp  RobotRuler.hpp
data/algorithm/: generation5271.csv
data/score/: score_data.csv
include/: EnvironementCreator.hpp  Pair.hpp  Robot.hpp  RobotCreator.hpp  RobotRuler.hpp
src/: CMakeLists.txt  EnvironementCreator.cpp  Robot.cpp  RobotCreator.cpp  RobotRuler.cpp  main.cpp
